; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_sopt_free.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_sopt_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mptopt = type { i32 }

@MPOF_ATTACHED = common dso_local global i32 0, align 4
@mptopt_zone = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mptcp_sopt_free(%struct.mptopt* %0) #0 {
  %2 = alloca %struct.mptopt*, align 8
  store %struct.mptopt* %0, %struct.mptopt** %2, align 8
  %3 = load %struct.mptopt*, %struct.mptopt** %2, align 8
  %4 = getelementptr inbounds %struct.mptopt, %struct.mptopt* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @MPOF_ATTACHED, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @VERIFY(i32 %10)
  %12 = load i32, i32* @mptopt_zone, align 4
  %13 = load %struct.mptopt*, %struct.mptopt** %2, align 8
  %14 = call i32 @zfree(i32 %12, %struct.mptopt* %13)
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @zfree(i32, %struct.mptopt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
